k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
   name: client-deploy
   labels:
     component: client
spec:
   replicas: 3
   selector:
      matchLabels:
        component: client
   template:
      metadata:
        labels:
           component: client
      spec:
        containers:
        - name: client
          image: stephengrider/multi-client
          ports:
          - containerPort: 3000
