k8s/postgres-cluster-ip.yaml
apiVersion: v1
kind: Service 
metadata:
   name: cluster-postgres-ip-service
spec:
   type: ClusterIP 
   selector:
      component: postgres
   ports:
      - port: 5432
        targetPort: 5432
