k8s/redis-cluster-ip.yaml
apiVersion: v1
kind: Service 
metadata:
   name: cluster-redis-ip-service
spec:
   type: ClusterIP 
   selector:
      component: redis 
   ports:
      - Port: 6379
        targetPort: 6379
